syntax = "proto3";

package auth;
option go_package = "../../pkg/pb;authgrpc";

import "google/api/annotations.proto";

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
          post: "/v1/register"
          body: "*"
        };
      }
      rpc Login (LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
          post: "/v1/login"
          body: "*"
        };
      }
    rpc DummyLogin(DummyLoginRequest) returns (DummyLoginResponse){
        option (google.api.http) = {
            get: "/v1/dummyLogin"
        };
    }
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string user_type = 3;
}

message RegisterResponse {
    string user_id = 1;
}

message LoginRequest {
    string user_id = 1 [json_name = "user_id"];
    string password = 2 [json_name = "password"];
}

message LoginResponse {
    string token = 1 [json_name = "token"];
}

message DummyLoginRequest {
    string user_type = 1 [json_name = "user_type"];
}

message DummyLoginResponse {
    string token = 1 [json_name = "token"];
}
